# culinara

./: .gitignore  .importlinter  README.md  alembic.ini  docker-compose.yml  main.py  proposed_culinary_data.md  pyproject.toml  pytest.ini  requirements.txt
scripts/: add_rejected_enum.py  check_health.py  check_port.py  clear_recipes.py  debug_recipe_creation.py  reproduce_ingredient_error.py  run_tests.py  seed_admin.py  seed_ingredients.py  seed_recipes.py  seed_users.py  test_filters.py  verify_admin_features.py  verify_api.py  verify_api_endpoints.py  verify_api_health.py  verify_api_startup.py  verify_application_layer.py  verify_cors.py  verify_crud.py  verify_db_connection.py  verify_db_expansion.py  verify_docs.py  verify_expansion.py  verify_frontend.py  verify_project_integrity.py  verify_recipe_api.py  verify_recipe_steps_isolated.py  verify_recipes.py  verify_units.py
src/application/: dtos.py
src/application/ports/: ai_service.py  password_port.py
src/application/usecases/: generate_recipe.py  (+4 more)
src/config/: logging.py  rate_limit.py  settings.py
src/domain/: exceptions.py
tests/: conftest.py  reproduce_duplicate_ingredient.py  test_api_serialization.py
tests/test_adapters/: test_recipe_repository.py  test_user_repository.py
tests/test_application/: test_recipe_usecase.py  test_user_usecase.py
tests/test_domain/: test_domain_entity.py  test_nutrition_calculator.py
tests/test_infrastructure/: test_auth_service.py  test_password_service.py
tests/test_presentation/: test_recipe_endpoints.py  test_social_endpoints.py  test_user_endpoints.py
(+53 files in other folders)
